// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should match snapshot 1`] = `undefined`;

exports[`Input component with props should match snapshot 1`] = `
<input
  className="input-field test"
  name="search"
  placeholder="Input you data"
/>
`;

exports[`Input component without props should match snapshot 1`] = `
<input
  className="input-field test"
/>
`;

exports[`Input component without props should match snapshot 2`] = `
<input
  className="input-field test"
/>
`;
